# monocoque

./: .gitignore  .gitmodules  .valgrindrc  CMakeLists.txt  HOW-TO-USE.md  README.md  install.sh
.github/actions/archpkgbuild/: action.yml
.github/workflows/: ci.yaml
conf/: basic_rpms.lua  car_radar.lua  cars_alongside.lua  custom.lua  monocoque.config  neo.lua  revburner.xml  rpms_and_flags.lua  rpms_and_radar.lua
src/arduino/custom/: Makefile  custom.ino
src/arduino/shift_lights/: shift_lights.ino  shift_lights.ino.orig
src/arduino/shiftlights/: shiftlights.h  shiftlights.ino  simdata.h
src/arduino/simhaptic/: simhaptic.h  simhaptic.ino
src/arduino/simwind/: simwind.h  simwind.ino
src/arduino/simwind_pwm/: simwind_pwm.ino
src/monocoque/: monocoque-cli.c  monocoque-gui.c  monocoque.c
src/monocoque/devices/: CMakeLists.txt  hapticeffect.c  hapticeffect.h  serialadapter.c  serialadapter.h  serialdevice.c  serialdevice.h  simdevice.c  simdevice.h  sound.c  sound.h  sounddevice.c  sounddevice.h  tachdevice.c  tachdevice.h  usbdevice.c  usbdevice.h  usbhapticdevice.c  usbhapticdevice.h  wheeldevice.c  wheeldevice.h
src/monocoque/devices/serial/: arduino.c  arduino.h  arduinoledlua.c  arduinoledlua.h  moza.c  moza.h  moza_ks_pro_wheel.c  moza_ks_pro_wheel.h  moza_new.c  moza_new.h
src/monocoque/devices/sound/: usb_generic_shaker.c  usb_generic_shaker.h  usb_generic_shaker_pulse.c
src/monocoque/devices/usb/: cslelitev3.c  cslelitev3.h  revburner.c  revburner.h  simagicp1000.c  simagicp1000.h  simnetpedals.c  simnetpedals.h
src/monocoque/devices/usb/wheels/: cammusc12.c  cammusc12.h  cammusc5.c  cammusc5.h  gtneo.c  gtneo.h  logitechg29.c  logitechg29.h
src/monocoque/gameloop/: CMakeLists.txt  gameloop.c  gameloop.h  loopdata.h  tachconfig.c  tachconfig.h
src/monocoque/helper/: CMakeLists.txt  confighelper.c  confighelper.h  dirhelper.c  dirhelper.h  parameters.c  parameters.h
src/monocoque/mgui/: CMakeLists.txt
src/monocoque/simulatorapi/: CMakeLists.txt  ac.h  rf2.h  simdata.h  simmapper.c  simmapper.h  test.h
src/monocoque/slog/: CMakeLists.txt  slog.c  slog.h
tests/: a.out  getmem.c  hidtest.c  pa_devs.c  patest_longsine.c  producer  revburnerparsetest.c  runmemtest.sh  setmem.c  setsimdata.c  sharedmemoryproducer.c  sharedmemoryunlink.c  simlighttest.c  testlibusb.c  testrevburner.c  usesharedmemory.c
tools/: monocoque-manager  uninstall.sh
tools/distro/arch/: PKGBUILD
tools/distro/arch/git/: PKGBUILD
tools/distro/arch/stable/: PKGBUILD
tools/distro/debian/dpkg/: control
tools/distro/debian/dpkg/ubuntu-latest/: control
tools/distro/distrobox/: install-distrobox.sh  uninstall-distrobox.sh
tools/distro/fedora/rpm/: fedora.spec
udev/: 69-monocoque.rules
