set(simulatorapi_source_files
  simapi/simapi/simmapper.c
  simapi/simapi/simmapper.h
  simapi/simapi/simdata.h
  simapi/simapi/test.h
  simapi/include/acdata.h
  simapi/include/rf2data.h
  simapi/include/pcars2data.h
  simapi/include/dirt2data.h
  simapi/include/scs2data.h
  simapi/include/outgauge.h
  simapi/include/f12018.h
  simapi/include/rbrdata.h
  simapi/include/wreckfest2data.h
  simapi/include/forza.h
  simapi/simmap/basicmap.h
  simapi/simmap/mapacdata.c
  simapi/simmap/mapacdata.h
  simapi/simapi/ac.h
  simapi/simapi/rf2.h
  simapi/simapi/dirt2.h
  simapi/simapi/pcars2.h
  simapi/simapi/scs2.h
  simapi/simapi/outgauge.h
  simapi/simapi/wreckfest2.h
  simapi/simapi/f1.h
  simapi/simapi/rbr.h
  simapi/simapi/forzadef.h
  simapi/simapi/mapping/acmapper.c
  simapi/simapi/mapping/rf2mapper.c
  simapi/simapi/mapping/pcars2mapper.c
  simapi/simapi/mapping/dirt2mapper.c
  simapi/simapi/mapping/scs2mapper.c
  simapi/simapi/mapping/outgaugemapper.c
  simapi/simapi/mapping/f12018mapper.c
  simapi/simapi/mapping/rbrmapper.c
  simapi/simapi/mapping/wreckfest2mapper.c
  simapi/simapi/mapping/forzamapper.c
  simapi/simapi/getpid.c
  simapi/simapi/getpid.h
)

add_library(simulatorapi STATIC ${simulatorapi_source_files})
